// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManageCounter /> should dispatch decreaseCounterByAmount() 1`] = `
Array [
  Array [
    Object {
      "amount": 10,
      "type": "INCREASE_COUNTER_BY_AMOUNT",
    },
  ],
  Array [
    Object {
      "amount": 0,
      "lowerLimit": 0,
      "type": "DECREASE_COUNTER_BY_AMOUNT",
    },
  ],
]
`;

exports[`<ManageCounter /> should dispatch increaseCounterByAmount() 1`] = `
Array [
  Array [
    Object {
      "amount": 10,
      "type": "INCREASE_COUNTER_BY_AMOUNT",
    },
  ],
]
`;

exports[`<ManageCounter /> should render correctly 1`] = `
<CounterPanel
  counter={10}
  lowerLimit={0}
  onDecrease={[Function]}
  onIncrease={[Function]}
/>
`;
